<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimage"
    tools:openDrawer="start"
    android:padding="24dp"
    tools:ignore="ExtraText">
    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="152dp"
        android:contentDescription="@string/tic_tac_toe_icon"
        android:src="@drawable/newtictactoe"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tic_tac_toe"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLogo" />

    <Button
        android:id="@+id/buttonStartGame"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/play_offline"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />


    <Button
        android:id="@+id/buttonStartGameOnline"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/play_online"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartGame"
        app:layout_constraintVertical_bias="0.16"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:backgroundTint="#F44336"
        android:text="@string/exit"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:iconSize="20dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonStartGame" />

    <ImageButton
        android:id="@+id/menuBtn"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:contentDescription="@string/setting"
        android:src="@drawable/setting"
        android:scaleType="fitCenter"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235"
        tools:ignore="MissingConstraints" />





</androidx.constraintlayout.widget.ConstraintLayout>
