<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activiyimage"
    tools:context=".Menu">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="serif"
        android:text="@string/about_me"
        android:textColor="#DBD1D1"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView"
        android:layout_marginTop="0dp"
        android:fontFamily="serif"
        android:text="@string/yogesh_patel_name_2"
        android:textColor="#DBD1D1"
        android:textSize="15sp"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="80dp">

        <ImageButton
            android:id="@+id/linkedInButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:contentDescription="@string/linked"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/linkedin" />
        <ImageButton
            android:id="@+id/githubButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:contentDescription="@string/linked"
            android:scaleType="fitCenter"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/github2" />
        <ImageButton
            android:id="@+id/instaButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:contentDescription="@string/insta"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/insta" />
    </LinearLayout>

</RelativeLayout>
